fixed z-index, pre-loading

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,7 +1,7 @@
-// .swiper,
-// .swiper-wrapper {
-//     z-index: 0;
-// }
+.swiper,
+.swiper-wrapper {
+    z-index: 0;
+}
 
 .reviews {
     @extend %section;
